<resources>
    <string-array name="lessonNames">
        <item>Pre-Intermediate</item>
        <item>Intermediate</item>
        <item>Upper-Intermediate</item>
    </string-array>
    <string-array name="country">
        <item>en</item>
        <item>es</item>
    </string-array>
    <string name="registration_allows_you_to">Registration allows you to:</string>
    <string name="share_three_topics">✓ share three topics</string>
    <string name="call_gpt_helper_20_times_per_day">✓ call gpt-helper 20 times per day</string>
    <string name="words_by_level">Words by level - available 😊</string>
    <string name="your_words">Your own words</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="adding_button">Adding button</string>
    <string name="no">No</string>
    <string name="post">Post</string>
    <string name="enter_name_of_topic">Add a new topic</string>
    <string name="add_subTopic">Add a new subtopic</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="delete_subTopic">Do you want to delete this subtopic?</string>
    <string name="delete_word">Do you want to delete this word?</string>
    <string name="yes">Yes</string>
    <string name="enter_info_to_create_new_word">Enter info to create a new word</string>
    <string name="word_or_phrase">word or phrase</string>
    <string name="translation">translation</string>
    <string name="definition_meaning">definition (meaning)</string>
    <string name="sentence">sentence (example of usage)</string>
    <string name="create">Create</string>
    <string name="Enter_info_to_edit">Enter info to edit the word</string>
    <string name="do_not_show_again">don\'t show me again</string>
    <string name="okay">Okay</string>
    <string name="gpt_can_help">GPT-bot can help</string>
    <string name="click_to_get_definition_from_bot">Click \"DEFINITION\" and bot will give it</string>
    <string name="definition">Definition</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="english_share_key">English VS: share key</string>
    <string name="our_site_english_vs_web_app">our site: english-vs.web.app</string>
    <string name="no_internet_connection">Error: Internet disconnected</string>
    <string name="school_waiting">Школа чекає на тебе!</string>
    <string name="soon_register_for_free">Скоріше реєструйся на безкоштовне індивідуальне заняття</string>
    <string name="ride">Поїхали</string>
    <string name="later">Пізніше</string>
    <string name="answer">your answer</string>
    <string name="send">Send</string>
    <string name="go">Go</string>
    <string name="after">Later</string>
    <string name="go_next">go next</string>
    <string name="reset">Reset</string>
    <string name="gpt_icon">Gpt Icon</string>
    <string name="app_name">English VS</string>
    <string name="a2_tema_0">00 Zero lesson</string>
    <string name="a2_tema_1">01 Friends</string>
    <string name="a2_tema_2">02 Mates</string>
    <string name="a2_tema_3">03 Modern devices and appliances</string>
    <string name="a2_tema_4">04 More about tech</string>
    <string name="a2_tema_5">05 Holidays</string>
    <string name="a2_tema_6">06 Other celebrations</string>
    <string name="a2_tema_7">07 Special occasions</string>
    <string name="a2_tema_8">08 Special events</string>
    <string name="a2_tema_9">09 Social networking</string>
    <string name="a2_tema_10">10 Socializing</string>
    <string name="a2_tema_11">11 Day off</string>
    <string name="a2_tema_12">12 A day to relax</string>
    <string name="a2_tema_13">13 Travel ideas</string>
    <string name="a2_tema_14">14 More about travel</string>
    <string name="a2_tema_15">15 Ecology and Environment</string>
    <string name="a2_tema_16">16 Environment and nature</string>
    <string name="a2_tema_17">17 Lifestyle</string>
    <string name="a2_tema_18">18 Style of living</string>
    <string name="a2_tema_19">19 Relationships</string>
    <string name="a2_tema_20">20 More about relationships</string>
    <string name="a2_tema_21">21 Stages</string>
    <string name="a2_tema_22">22 Step by step</string>
    <string name="a2_tema_23">23 Cinema and movies</string>
    <string name="a2_tema_24">24 More about cinema</string>
    <string name="a2_tema_25">25 Media</string>
    <string name="a2_tema_26">26 Other news</string>
    <string name="a2_tema_27">27 The best job</string>
    <string name="a2_tema_28">28 Working</string>
    <string name="a2_tema_29">29 Look to the future</string>
    <string name="a2_tema_30">30 Future and fate</string>
    <string name="a2_tema_31">31 Health Matters</string>
    <string name="a2_tema_32">32 Getting healthy</string>
    <string name="a2_tema_33">33 Places</string>
    <string name="a2_tema_34">34 Other places</string>
    <string name="a2_tema_35">35 Love and trust</string>
    <string name="a2_tema_36">36 Love and romance</string>
    <string name="a2_tema_37">37 Music</string>
    <string name="a2_tema_38">38 More about music</string>
    <string name="a2_tema_39">39 Modern society</string>
    <string name="a2_tema_40">40 People and society</string>
    <string name="a2_tema_41">41 Houses and homes</string>
    <string name="a2_tema_42">42 Is house a home?</string>
    <string name="a2_tema_43">43 The marketplace</string>
    <string name="a2_tema_44">44 Market or supermarket</string>
    <string name="a2_tema_45">45 Money</string>
    <string name="a2_tema_46">46 It’s all about money</string>
    <string name="a2_tema_47">47 Fame and Success</string>
    <string name="a2_tema_48">48 Celebrity overnight</string>
    <string name="a2_tema_49">49 Ideal World</string>
    <string name="a2_tema_50">50 Your universe</string>
    <string name="b1_tema_0">00 Zero lesson</string>
    <string name="b1_tema_1">01 Likes and Dislikes</string>
    <string name="b1_tema_2">02 Loves &amp; hates</string>
    <string name="b1_tema_3">03 The world around you</string>
    <string name="b1_tema_4">04 Ou surroundings</string>
    <string name="b1_tema_5">05 Keeping up-to-date</string>
    <string name="b1_tema_6">06 Staying modern</string>
    <string name="b1_tema_7">07 Dating</string>
    <string name="b1_tema_8">08 Romances</string>
    <string name="b1_tema_9">09 Sports you’ve tried</string>
    <string name="b1_tema_10">10 Working out</string>
    <string name="b1_tema_11">11 Money Matters</string>
    <string name="b1_tema_12">12 Money again</string>
    <string name="b1_tema_13">13 Crime</string>
    <string name="b1_tema_14">14 Crime and punishment</string>
    <string name="b1_tema_15">15 Natural disasters</string>
    <string name="b1_tema_16">16 Other catastrophes</string>
    <string name="b1_tema_17">17 Parties</string>
    <string name="b1_tema_18">18 Party hard</string>
    <string name="b1_tema_19">19 Modern morals</string>
    <string name="b1_tema_20">20 Moral rules</string>
    <string name="b1_tema_21">21 Silver screen</string>
    <string name="b1_tema_22">22 TV</string>
    <string name="b1_tema_23">23 Cinema</string>
    <string name="b1_tema_24">24 Cinemania</string>
    <string name="b1_tema_25">25 News</string>
    <string name="b1_tema_26">26 News updates</string>
    <string name="b1_tema_27">27 Beauty and Health</string>
    <string name="b1_tema_28">28 Beauty secrets</string>
    <string name="b1_tema_29">29 Social Issues</string>
    <string name="b1_tema_30">30 Society problems</string>
    <string name="b1_tema_31">31 Challenge</string>
    <string name="b1_tema_32">32 Going to the aim</string>
    <string name="b1_tema_33">33 Age</string>
    <string name="b1_tema_34">34 Time flies</string>
    <string name="b1_tema_35">35 Jobs</string>
    <string name="b1_tema_36">36 Careers</string>
    <string name="b1_tema_37">37 Opinions</string>
    <string name="b1_tema_38">38 Other points of view</string>
    <string name="b1_tema_39">39 Shops and shoppers</string>
    <string name="b1_tema_40">40 Shopping around</string>
    <string name="b1_tema_41">41 Music Universe</string>
    <string name="b1_tema_42">42 Into the music</string>
    <string name="b1_tema_43">43 Free time</string>
    <string name="b1_tema_44">44 Leisure</string>
    <string name="b1_tema_45">45 Entertainment</string>
    <string name="b1_tema_46">46 Ways to entertain</string>
    <string name="b1_tema_47">47 Advertising</string>
    <string name="b1_tema_48">48 Commercials</string>
    <string name="b1_tema_49">49 Learning</string>
    <string name="b1_tema_50">50 Hitting the books</string>
    <string-array name="topics_name_a2">
        <item>00 Zero lesson</item>
        <item>01 Friends</item>
        <item>02 Mates</item>
        <item>03 Modern devices and appliances</item>
        <item>04 More about tech</item>
        <item>05 Holidays</item>
        <item>06 Other celebrations</item>
        <item>07 Special occasions</item>
        <item>08 Special events</item>
        <item>09 Social networking</item>
        <item>10 Socializing</item>
        <item>11 Day off</item>
        <item>12 A day to relax</item>
        <item>13 Travel ideas</item>
        <item>14 More about travel</item>
        <item>15 Ecology and Environment</item>
        <item>16 Environment and nature</item>
        <item>17 Lifestyle</item>
        <item>18 Style of living</item>
        <item>19 Relationships</item>
        <item>20 More about relationships</item>
        <item>21 Stages</item>
        <item>22 Step by step</item>
        <item>23 Cinema and movies</item>
        <item>24 More about cinema</item>
        <item>25 Media</item>
        <item>26 Other news</item>
        <item>27 The best job</item>
        <item>28 Working</item>
        <item>29 Look to the future</item>
        <item>30 Future and fate</item>
        <item>31 Health Matters</item>
        <item>32 Getting healthy</item>
        <item>33 Places</item>
        <item>34 Other places</item>
        <item>35 Love and trust</item>
        <item>36 Love and romance</item>
        <item>37 Music</item>
        <item>38 More about music</item>
        <item>39 Modern society</item>
        <item>40 People and society</item>
        <item>41 Houses and homes</item>
        <item>42 Is house a home?</item>
        <item>43 The marketplace</item>
        <item>44 Market or supermarket</item>
        <item>45 Money</item>
        <item>46 It’s all about money</item>
        <item>47 Fame and Success</item>
        <item>48 Celebrity overnight</item>
        <item>49 Ideal World</item>
        <item>50 Your universe</item>
    </string-array>
</resources>