<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".words_by_levels.study_way.FragmentLearn">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="OnClick">

        <LinearLayout
            android:id="@+id/verticalLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" />

    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout_proz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_proz"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/relative_editing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/bottom_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="7dp"
                android:background="@drawable/botton_sheet_back"
                android:gravity="center_horizontal|bottom"
                android:orientation="vertical"
                android:padding="15dp"
                android:visibility="gone">


                <TextView
                    android:id="@+id/menu_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_info_to_create_new_word"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/english_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:gravity="center"
                    android:hint="@string/word_or_phrase"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/ios_blackText" />

                <EditText
                    android:id="@+id/russian_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:gravity="center"
                    android:hint="@string/translation"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/ios_blackText" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/definition"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/definition_meaning"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textColor="@color/ios_blackText" />

                    <ImageView
                        android:id="@+id/callGptDefinition"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/gpt_icon"
                        android:scaleType="centerCrop"
                        android:src="@drawable/chatgpt_icon" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="25dp"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/sentence"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/sentence"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textColor="@color/ios_blackText" />

                    <ImageView
                        android:id="@+id/callGptSentence"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/gpt_icon"
                        android:contextClickable="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/chatgpt_icon" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/but_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/person_together"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/cancel"
                        android:textColor="@android:color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/but_yes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/person_together"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/create"
                        android:textColor="@android:color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>


</FrameLayout>